config and about updates

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ central-search:
 # title of site appears in banner
 title: Raycide Mosher Civil War Letters
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: A set of letters depicting a soldier's life in the Civil War
+tagline: Letters depicting a soldier's experience of the Civil War
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
 description: "A collection of letters written by Union soldier Raycide Mosher to his Michigan family between 1864 and 1865."
