--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ central-search:
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: Vernice and Sheldon Zadok Thayer Photograph Collection
+title: Sheldon Z. and Vernice Thayer Collection
 # tagline, a short phrase that will appear throughout the site in the top banner
 tagline: Photographs of Idaho and the Inland Northwest, 1932-1951
 # description appears in meta tags and other locations
