--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -8,7 +8,7 @@
 #
 # featured image is used in home page banner and in meta markup to represent the collection
 # use either an objectid (from an item in this collect), a relative location of an image in this repo, or a full url to an image elsewhere
-featured-image: demo_001
+featured-image: https://objects.lib.uidaho.edu/buttons/coverimage3.jpg
 # optional: add extra padding around collection title for a larger image feature. 
 home-title-y-padding: 12em # the margin from the top your title portion will appear.
 # optional: change position of background image, center, top, bottom
@@ -23,18 +23,18 @@ content-alert: false # true / false
 browse-buttons: true # true / false, adds previous/next arrows to items, but increases build time
 
 ##########
-# SUBJECTS PAGE
+# POLITICAL AFFILIATIONS PAGE
 #
-subjects-fields: subject;creator # set of fields separated by ; to be featured in the cloud (leave blank or comment out to not generate)
-subjects-min: 1 # min size for subject cloud, too many terms = slow load time!
-subjects-stopwords: # set of subjects separated by ; that will be removed from display, e.g. boxers;boxing
+political_affiliation-fields: political_affiliation # set of fields separated by ; to be featured in the cloud (leave blank or comment out to not generate)
+political_affiliation-min: 1 # min size for subject cloud, too many terms = slow load time!
+political_affiliation-stopwords: # set of subjects separated by ; that will be removed from display, e.g. boxers;boxing
 
 ##########
-# LOCATIONS PAGE
+# EVENT TYPES PAGE
 #
-locations-fields: location # set of fields separated by ; to be featured in the cloud (leave blank or comment out to not generate)
-locations-min: 1 # min size for subject cloud, too many terms = slow load time!
-locations-stopwords: # set of subjects separated by ; that will be removed from display, e.g. boxers;boxing
+political_affiliation-fields: event_type # set of fields separated by ; to be featured in the cloud (leave blank or comment out to not generate)
+political_affiliation-min: 1 # min size for subject cloud, too many terms = slow load time!
+political_affiliation-stopwords: # set of subjects separated by ; that will be removed from display, e.g. boxers;boxing
 
 ##########
 # MAP PAGE
