--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ central-search:
 # title of site appears in banner
 title: Kibbie Dome 50th Anniversary Digital Collection
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: A collection of images and documents depicting the 50-year history of the Kibbie Dome.
+tagline: A collection of images and documents depicting the history of the Kibbie Dome.
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
 description: Construction of the Kibbie Dome (now the P1FCU Kibbie Dome, previously the Kibbie-ASUI Activity Center), the University of Idaho's multipurpose athletic stadium, was completed in the summer of 1975. In recognition of the building's 50th anniversary, Special Collections and Archives staff curated this digital collection of images and documents depicting its history.
