--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ title: Kibbie Dome 50th Anniversary Digital Collection
 tagline: A collection of images and documents depicting the history of the Kibbie Dome.
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: Construction of the Kibbie Dome (now the P1FCU Kibbie Dome, previously the Kibbie-ASUI Activity Center), the University of Idaho's multipurpose athletic stadium, was completed in the summer of 1975. In recognition of the building's 50th anniversary, Special Collections and Archives staff curated this digital collection of images and documents depicting its history.
+description: Construction of the Kibbie Dome (now the P1FCU Kibbie Dome, previously the Kibbie-ASUI Activity Center), the University of Idaho's multipurpose athletic stadium, was completed in the summer of 1975. In recognition of the building's 50th anniversary, the University Library's Special Collections and Archives curated this digital collection of images and documents depicting its history.
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
 keywords: Kibbie; Kibbie Dome; sports; campus; University of Idaho
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
