--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ central-search:
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: Priest River Photograph Collection
+title: Marylyn Cork Priest River Historical Collection
 # tagline, a short phrase that will appear throughout the site in the top banner
 tagline: Community, Organizations and Timber Heritage of Priest River, Idaho
 # description appears in meta tags and other locations
