--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ title: Marylyn Cork Priest River Historical Collection
 tagline: Community, Organizations and Timber Heritage of Priest River, Idaho
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "An ongoing digital collection of nearly 1,800 images documenting the people, industries, and daily life of Priest River and the surrounding communities in Bonner County. Digitized with support from the Idaho Humanities Council, the photographs are available online through the University of Idaho, while the physical collection is housed at the Priest River Library, where researchers should direct inquiries."
+description: "This ongoing collection features over 500 images documenting the people, industries, and daily life of Priest River and the surrounding communities in Bonner County from the nearly 1,800 images in the Marylyn Cork collection. Researchers interested in the materials should contact the Priest River Library, where the physical collection is housed."
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
 keywords: idaho; logging; photography
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
