--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ central-search: true
 # title of site appears in banner
 title: Barnard-Stockbridge Photograph Collection
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: Historical Photographs of Northern Idaho Mines, Towns, and Scenery, 1894-1964
+tagline: Historical Photographs of Northern Idaho Mines, Towns, and Scenery
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
 description: "The Barnard-Stockbridge Collection features over 3000 photographs selected from over 200,000 nitrocellulose and glass plate negatives taken by Nellie Stockbridge and T.N. Barnard during the years 1894-1964. The photos depict various aspects of life in the Wallace/Kellogg mining area."
