--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -61,7 +61,7 @@ year-nav-increment: 5 # set increments to auto gen nav years
 # 
 # add metadata fields for export in data downloads (tip: paste in first row of csv)
 # comma delimited list, reference url is automatic
-metadata-export-fields: "title,description,date,date is approximate,subject,relation,location,county,city,latitude,longitude,source,identifier,rightsstatement,rights,format original,type,format,language,date created,date modified,objectid"
+metadata-export-fields: "title,description,date,date is approximate,subject,relation,location,county,city,latitude,longitude,source,identifier,rightsstatement,rights,format_original,type,format,language,date created,date modified,objectid"
 # generate a facets list for given fields, comma delimited
 metadata-facets-fields: "subject,location"
 
