--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -8,7 +8,7 @@
 #
 # featured image is used in home page banner and in meta markup to represent the collection
 # use either an objectid (from an item in this collect), a relative location of an image in this repo, or a full url to an image elsewhere
-featured-image: demo_001
+featured-image: https://objects.lib.uidaho.edu/expo/fy22_879613372_jp04_0058.jpg
 # optional: add extra padding around collection title for a larger image feature. 
 home-title-y-padding: 12em # the margin from the top your title portion will appear.
 # optional: change position of background image, center, top, bottom
@@ -25,9 +25,30 @@ browse-buttons: true # true / false, adds previous/next arrows to items, but inc
 ##########
 # SUBJECTS PAGE
 #
-subjects-fields: subject;creator # set of fields separated by ; to be featured in the cloud (leave blank or comment out to not generate)
+subjects-fields: subject # set of fields separated by ; to be featured in the cloud (leave blank or comment out to not generate)
 subjects-min: 1 # min size for subject cloud, too many terms = slow load time!
 subjects-stopwords: # set of subjects separated by ; that will be removed from display, e.g. boxers;boxing
+
+##########
+# CREATOR PAGE
+#
+creator-fields: creator # set of fields separated by ; to be featured in the cloud (leave blank or comment out to not generate)
+creator-min: 1 # min size for subject cloud, too many terms = slow load time!
+creator-stopwords: # set of subjects separated by ; that will be removed from display, e.g. boxers;boxing
+
+##########
+# SPONSOR PAGE
+#
+creator-fields: client_sponsor # set of fields separated by ; to be featured in the cloud (leave blank or comment out to not generate)
+creator-min: 1 # min size for subject cloud, too many terms = slow load time!
+creator-stopwords: # set of subjects separated by ; that will be removed from display, e.g. boxers;boxing
+
+##########
+# ADVISOR PAGE
+#
+creator-fields: faculty_advisor # set of fields separated by ; to be featured in the cloud (leave blank or comment out to not generate)
+creator-min: 1 # min size for subject cloud, too many terms = slow load time!
+creator-stopwords: # set of subjects separated by ; that will be removed from display, e.g. boxers;boxing
 
 ##########
 # LOCATIONS PAGE
