--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ central-search: true
 # title of site appears in banner
 title: 1918 Flu Pandemic Collection
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: Materials depicting the impact of the "Spanish Flu" on the University of Idaho
+tagline: Materials depicting the impact of the 1918 flu pandemic on the University of Idaho
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
 description: "In 1918, a virulent strain of influenza affected approximately 500 million individuals worldwide. The disease reached the University of Idaho in October of that year, prompting the university to cancel activities, enact a quarantine, and encourage the use of gauze face masks. The 1918 Flu Pandemic Collection brings together correspondence, reports, news articles, oral histories, and other materials that highlight the local response to the 1918 pandemic."
