--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ central-search: true
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: The Big Burn Collection
+title: Big Burn Collection
 # tagline, a short phrase that will appear throughout the site in the top banner
 tagline: An exhibition of materials related to the 'Big Burn' fires of 1910
 # description appears in meta tags and other locations
