update collection title

--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ central-search: true
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: The Trees Grew Tall Photograph Collection
+title: Trees Grew Tall Photograph Collection
 # tagline, a short phrase that will appear throughout the site in the top banner
 tagline: Photographs used in the making of the book The Trees Grew Tall, 1898 - 1943
 # description appears in meta tags and other locations
