--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ central-search: true
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: The Theodore Roosevelt Collection
+title: Theodore Roosevelt Collection
 # tagline, a short phrase that will appear throughout the site in the top banner
 tagline: Commemorating the 100th anniversary of President Theodore Roosevelt's historic visit to the University of Idaho campus
 # description appears in meta tags and other locations
