--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ organization-logo-nav: https://www.lib.uidaho.edu/media/digital/liblogo_white.pn
 #
 # Library directory location. This allows you to customize where the standard assets are found.
 # provide a relative path in this repository or full url 
-lib-assets: https://www.lib.uidaho.edu/assets
+lib-assets: https://www.lib.uidaho.edu/assets/dc/lib
 # ignore stuff
 exclude: [docs/, Rakefile, rakelib/, README.md, LICENSE, CODEOWNERS, utilities/]
 # compress CSS output
